# genoexpect

./: .gitignore  README.md  genoexpect_live.html  pyproject.toml
docs/: design.md
examples/: basic_workflow.py  studies.yaml
src/genoexpect/: __init__.py  cli.py  exceptions.py  report.py  result.py  rules.py  step.py  study.py
src/genoexpect/loaders/: __init__.py  yaml_loader.py
src/genoexpect/parsers/: __init__.py  star.py
tests/: test_loader.py  test_parser_star.py  test_report.py  test_rules.py  test_step.py  test_study.py
tests/fixtures/: star_Log.final.out  studies.yaml
